--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Hello World!</title>
 </head>
 <body>
+    <h1>This is my first Git project.</h1>
+    <script>
+        document.write("text to the screen");
+        alert("hello what is your name?")
+        prompt("Sorry check your data")
+    </script>
     
 </body>
 </html>
