home page addition is completed.

--- a/home_page.html
+++ b/home_page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>This is a new home page!</h1>
-    <p>The home is completed.</p>
+    <p>The home_page addition is completed.</p>
     
 </body>
 </html>
