Added a new line.

--- a/home_page.html
+++ b/home_page.html
@@ -7,6 +7,7 @@
 <body>
     <h1>This is a new home page!</h1>
     <p>The home_page addition is completed.</p>
+    <p>There is something I missed to update.</p>
     
 </body>
 </html>
